<resources>
    <string name="app_name">Wake Up</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="add_alarm">Add Alarm</string>


    <string-array name="item_array_hour">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="item_array_minute">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string name="txt_run_time">%1$02d : %2$02d</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="alarm_sound">Select Notification</string>
    <string name="service">Service</string>

    <string name="title_activity_stop_alarm">StopAlarm</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="difficulty_rating">Difficulty rating</string>
    <string name="answer_here">Answer Here (Round Down)</string>
    <string name="ans">Answer</string>
    <string name="turn_off_alarm">Turn Off Alarm</string>
    <string name="wrong">WRONG</string>
    <string name="alarm">ALARM</string>
    <string name="stopwatch">STOPWATCH</string>
    <string name="timer">TIMER</string>
    <string name="alarm_notify">Alarm!</string>
    <string name="click_me">Click me!</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="lap">Lap</string>
    <string name="hours">hours</string>
    <string name="min">min</string>
    <string name="resume">Resume</string>

</resources>
