<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tpAlarm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:orientation="horizontal">

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/monday"
                android:textOn="@string/monday"
                android:id="@+id/monday"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/tuesday"
                android:textOn="@string/tuesday"
                android:id="@+id/tuesday"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/wednesday"
                android:textOn="@string/wednesday"
                android:id="@+id/wednesday"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/thursday"
                android:textOn="@string/thursday"
                android:id="@+id/thursday"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/friday"
                android:textOn="@string/friday"
                android:id="@+id/friday"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/saturday"
                android:textOn="@string/saturday"
                android:id="@+id/saturday"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/sunday"
                android:textOn="@string/sunday"
                android:id="@+id/sunday"/>


    </LinearLayout>

</LinearLayout>