<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="aitfinalproject.wakeup.Fragments.TimerFragment">

    <LinearLayout
        android:id="@+id/linearSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="25dp"
        android:orientation="horizontal">
        
        <Spinner
            android:id="@+id/spinnerHour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">
        </Spinner>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textSize="22sp"
            android:textColor="#000000"
            android:layout_weight="4"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text=":"
            android:gravity="center|bottom"
            android:textSize="22sp"
            android:textColor="#000000"
            />

        <Spinner
            android:id="@+id/spinnerMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_weight="4"/>


    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="55sp"
            android:text="00:00:00"
            android:gravity="center"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTimeReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/reset"
            android:textColor="#000000"
            android:background="@color/colorReset"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btnTimeStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/start"
            android:textColor="#000000"
            android:background="@color/colorStart"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ToggleButton
        android:id="@+id/btnPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/pause"
        android:textOn="@string/resume"
        android:textColor="#000000"
        android:background="@color/colorButton"

        />

    </LinearLayout>


</LinearLayout>
