<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aitfinalproject.wakeup.AlarmClock.StopAlarm"
    android:gravity="center"
    android:background="#9fa8da"
    android:orientation="vertical">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <!--<TextView-->
        <!--android:id="@+id/fullscreen_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center"-->
        <!--android:keepScreenOn="true"-->
        <!--android:text="@string/dummy_content"-->
        <!--android:textColor="#33b5e5"-->
        <!--android:textSize="50sp"-->
        <!--android:textStyle="bold" />-->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <Button
        android:id="@+id/dummy_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/turn_off_alarm"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/equation"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:hint="@string/answer_here"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans"
        android:id="@+id/btnEqAns"/>

</LinearLayout>
